--- a/src/ejemplo/FXMLDocument.fxml
+++ b/src/ejemplo/FXMLDocument.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +21,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="850.0" prefHeight="600.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ejemplo.FXMLDocumentController">
+<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="850.0" prefHeight="600.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ejemplo.FXMLDocumentController">
    <content>
       <BorderPane>
          <top>
@@ -70,9 +75,20 @@
                            <items>
                               <TableView fx:id="dataBaseTable">
                                 <columns>
-                                  <TableColumn fx:id="dataStation" prefWidth="75.0" text="Estación" />
-                                  <TableColumn fx:id="dataRepetition" prefWidth="75.0" text="Repetición" />
-                                    <TableColumn fx:id="dataStress" prefWidth="75.0" text="Esfuerzo" />
+                                  <TableColumn fx:id="dataRuta" prefWidth="51.0" text="Ruta" />
+                                  <TableColumn fx:id="dataFecha" prefWidth="49.0" text="Fecha" />
+                                    <TableColumn fx:id="dataDescripcion" prefWidth="81.0" text="Descripción" />
+                                    <TableColumn fx:id="dataEst_ini" prefWidth="35.0" text="Est_Ini" />
+                                    <TableColumn fx:id="dataEst_fin" prefWidth="75.0" text="Est_Fin" />
+                                    <TableColumn fx:id="dataIri_izq" prefWidth="75.0" text="IRI_Izq" />
+                                    <TableColumn fx:id="dataIri_cen" prefWidth="75.0" text="IRI_Cen" />
+                                    <TableColumn fx:id="dataIri_der" prefWidth="75.0" text="IRI_Der" />
+                                    <TableColumn fx:id="dataMri" prefWidth="75.0" text="MRI" />
+                                    <TableColumn fx:id="dataEst" prefWidth="52.0" text="Est" />
+                                    <TableColumn fx:id="dataEvento" prefWidth="65.0" text="Evento" />
+                                    <TableColumn fx:id="dataLatitud" prefWidth="75.0" text="Latitud" />
+                                    <TableColumn fx:id="dataLongitud" prefWidth="58.0" text="Longitud" />
+                                    <TableColumn fx:id="dataNotas" prefWidth="58.0" text="Notas" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -80,7 +96,7 @@
                               </TableView>
                               <HBox minWidth="0.0">
                                  <children>
-                                    <TextArea fx:id="contents" editable="false" text="Contenido del Archivo" HBox.hgrow="ALWAYS" />
+                                    <TextArea fx:id="contents" editable="false" text="Contenido del Archivo&#10;" HBox.hgrow="ALWAYS" />
                                  </children>
                               </HBox>
                            </items>
